# Ripes

./: .clang-format  .clang-format-ignore  .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  RISC-V-sim.pro  Ripes.pro  VenusToBin.py  iokeyboard.cpp  main.cpp  prepareRelease.py  reports.md
src/: .clang-format  CMakeLists.txt  STLExtras.h  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  aboutwidget.cpp  aboutwidget.h  aboutwidget.ui  addressdialog.cpp  addressdialog.h  addressdialog.ui  asmhighlighter.cpp  asmhighlighter.h  assembler.cpp  assembler.h  binutils.cpp  binutils.h  branchtab.cpp  branchtab.h  branchtab.ui  cache.cpp  cache.h  cachebase.cpp  cachebase.h  cacheconfigwidget.cpp  cacheconfigwidget.h  cacheconfigwidget.ui  cachegraphic.cpp  cachegraphic.h  cacheinspector.cpp  cacheinspector.h  cacheinspector.ui  cacheplotwidget.cpp  cacheplotwidget.h  cachesetupwidget.cpp  cachesetupwidget.h  cachesetupwidget.ui  cachesim.cpp  cachesim.h  (+171 more)
src/assembler/: CMakeLists.txt  assembler.cpp  assembler.h  assembler_defines.h  assemblerbase.cpp  assemblerbase.h  assemblererror.h  directive.h  expreval.cpp  expreval.h  gnudirectives.cpp  gnudirectives.h  instruction.h  lexerutilities.h  location.h  matcher.h  objdump.cpp  objdump.h  parserutilities.cpp  parserutilities.h  program.cpp  program.h  pseudoinstruction.h  relocation.h  rv32i_assembler.cpp  rv32i_assembler.h  rv64i_assembler.cpp  rv64i_assembler.h  rv_c_ext.h  rv_i_ext.h  rv_m_ext.h  rvassembler_common.h  rvrelocations.cpp  rvrelocations.h  sFloat.h  symbolmap.cpp  symbolmap.h
src/assembler/special_assembler/: assemblerMultiIssue.h  assemblerVLIW.h
src/cachesim/: CMakeLists.txt  cacheconfigwidget.cpp  cacheconfigwidget.h  cacheconfigwidget.ui  cachegraphic.cpp  cachegraphic.h  cacheplotview.cpp  cacheplotview.h  cacheplotwidget.cpp  cacheplotwidget.h  cacheplotwidget.ui  cacheratioplotview.cpp  cacheratioplotview.h  cachesim.cpp  cachesim.h  cacheview.cpp  cacheview.h  cachewidget.cpp  cachewidget.h  cachewidget.ui  callout.cpp  callout.h  chartlinemarker.cpp  chartlinemarker.h  l1cacheshim.cpp  l1cacheshim.h  plotconfiguration.cpp  plotconfiguration.h  plotconfiguration.ui
src/cli/: CMakeLists.txt  clioptions.cpp  clioptions.h  clirunner.cpp  programutilities.cpp  programutilities.h  telemetry.h
src/cmd/: CMakeLists.txt  cmdoptions.cpp  cmdoptions.h  cmdrunner.cpp  cmdrunner.h  telemetry.h
src/editor/: CMakeLists.txt  codeeditor.cpp  codeeditor.h  csyntaxhighlighter.cpp  csyntaxhighlighter.h  highlightabletextedit.cpp  highlightabletextedit.h  rvassemblyhighlighter.cpp  rvassemblyhighlighter.h  rvsyntaxhighlighter.cpp  rvsyntaxhighlighter.h  syntaxhighlighter.cpp  syntaxhighlighter.h
src/graphics/: backgrounditems.cpp  backgrounditems.h  connection.cpp  connection.h  descriptions.h  pipelinewidget.cpp  pipelinewidget.h  shape.cpp  shape.h
src/io/: CMakeLists.txt  VBus.h  XTcpSocket.cpp  XTcpSocket.h  io7indicator.cpp  io7indicator.h  iobase.cpp  iobase.h  iodpad.cpp  iodpad.h  ioexternalbus.cpp  ioexternalbus.h  ioexternalbus.ui  iokeyboard.cpp  iokeyboard.h  ioledmatrix.cpp  ioledmatrix.h  iomanager.cpp  iomanager.h  iomouse.cpp  iomouse.h  ioregistry.h  ioswitches.cpp  ioswitches.h  memorymapmodel.cpp  memorymapmodel.h  periphparammodel.cpp  periphparammodel.h  registermapmodel.cpp  registermapmodel.h  tcp.h
src/isa/: CMakeLists.txt  instruction.h  isa_defines.h  isaconstructor.cpp  isaconstructor.h  isainfo.h  mips32isainfo.h  mipsisainfo_common.cpp  mipsisainfo_common.h  pseudoinstruction.h  rv32isainfo.h  rv64isainfo.h  rvVliwIsainfo.h  rv_c_ext.cpp  rv_c_ext.h  rv_f_ext.cpp  rv_f_ext.h  rv_i_ext.cpp  rv_i_ext.h  rv_m_ext.cpp  rv_m_ext.h  rv_zicsr_ext.cpp  rv_zicsr_ext.h  rvisainfo_common.cpp  rvisainfo_common.h  rvrelocations.h  symbolmap.cpp  symbolmap.h
src/processors/: CMakeLists.txt  layouts.qrc  ripesprocessor.h  ripesvsrtlprocessor.h
src/processors/5s/: 5s_exmem.h  5s_idex.h  5s_ifid.h  5s_memwb.h  riscv_5s.h  rv_5s_wof_extended_layout.json
src/processors/PicoRV32/: picorv32.s  (+2 more)
src/syscall/: CMakeLists.txt  control.h  file.h  print.h  ripes_syscall.cpp  ripes_syscall.h  riscv_syscall.h  syscall_time.h  syscallviewer.cpp  syscallviewer.h  syscallviewer.ui  systemio.cpp  systemio.h
src/taskcheck/: CMakeLists.txt  task.cpp  task.h  taskchecker.cpp  taskchecker.h  taskinit.cpp  taskinit.h  tasktab.cpp  tasktab.h  tasktab.ui
src/tmp_unused/: pipelinetable.cpp  pipelinetable.ui  pipelinetablemodel.cpp  rundialog.cpp  rundialog.h  rundialog.ui  rwjumpmodel.cpp  rwjumpmodel.h
src/utilities/: CMakeLists.txt  hexspinbox.h  scrolleventfilter.h  systemutils.cpp  systemutils.h
src/version/: .gitignore  CMakeLists.txt  version.cmake  version.cpp  version.h
test/: CMakeLists.txt  mulh.s  mulhsu.s  mulhu.s  programloader.h  test.cpp  test.pro  testall.cpp  tests.qrc  tst_assembler.cpp  tst_cosimulate.cpp  tst_expreval.cpp  tst_io_7indicator.cpp  tst_io_keyboard.cpp  tst_io_mouse.cpp  tst_reverse.cpp  tst_riscv.cpp  tst_stall.cpp  tst_xtcpsocket  tst_xtcpsocket.cpp
test/riscv-tests/: add.s  addi.s  and.s  andi.s  brk_syscall.s  cc.sh  div.s  divu.s  ecall_file.s  fadd.s  fclass.s  fclassd.s  fcmp.s  fcvt.s  fcvt_w.s  fcvtd.s  fdiv.s  fmadd.s  fmaddd.s  fmin.s  ldst.s  ldstd.s  lui.s  memory.s  move.s  mul.s  mulh.s  mulhsu.s  mulhu.s  or.s  ori.s  ranpi.c  readme.txt  recoding.s  recodingd.s  rem.s  remu.s  simple.s  sll.s  slli.s  (+11 more)
test/riscv-tests-64/: add.S  addi.S  addiw.S  addw.S  and.S  andi.S  brk_syscall.S  ecall_file.S  lb.S  lbu.S  ld.S  lh.S  lhu.S  lui.S  lw.S  lwu.S  mulh_test.S  or.S  ori.S  sb.S  sd.S  sh.S  simple.S  sll.S  slli.S  slliw.S  sllw.S  slt.S  slti.S  sltiu.S  sltu.S  sra.S  srai.S  sraiw.S  sraw.S  srl.S  srli.S  srliw.S  srlw.S  sub.S  (+4 more)
test/riscv-tests-c/: rvc.s
test/riscv-tests-c-64/: rvc.s
test/riscv-tests-d/: faddd.s  fcmpd.s  fcvt_wd.s  fdivd.s  fmind.s
test/riscv-tests-f/: fadd.s  fcmp.s  fcvt.s  fcvt_w.s  fdiv.s  fmadd.s  fmin.s
test/riscv-tests-vliw/: jmps.s  regWr.s  test_prog1.s  test_prog2_cos.s
(+388 files in other folders)
